bikes-bootstrap/css/styles.css
@media only screen and (max-width: 767px) {
  .dropdown-menu {
    background-color: rgb(45, 45, 45);
  }

  #hide-on-md {
    display: none;
  }
}

@media only screen and (min-width: 768px) {
  .dropdown-menu {
    background-color: #343a40;
  }

  #hide-on-lg {
    display: none;
  }
}

body {
  background-color: rgb(60, 60, 60);
  box-sizing: border-box;
}

h1 {
  color: white;
}

h3 {
  color: white;
}

p {
  color: white;
}

.bg-cover {
  background-attachment: static;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.banner-title {
  font-size: 400%;
  color: white;
  text-shadow: 1px 1px 10px #000;
}

.bikes-list-banner {
  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../resources/ducati_1200.jpg)
}

.resources-banner {
  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../resources/destijl-virago.png)
}

.padding {
  padding-bottom: 2rem;
}

.navbar {
  padding: .8rem;
  background-color: rgb(40, 40, 40);
}

.navbar-nav li {
  padding-right: 1.3rem;
}

.nav-link {
  font-size: 1.1em !important;
}

.welcome {
  width: 75%;
  margin: 0 auto;
  padding-top: 2rem;
}

.overlay {
  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../resources/destijl-virago.png);
  background-size: cover;
}

.dropdown-item {
  color: white;
}

.bike-img {
  max-width: 100%;
}

.bike-link:hover {
  color: white;
  text-decoration-line: none;
}

.bike-text {
  padding: 0 4rem 0 4rem;
}

/* Carousel */
.carousel-inner img {
  width: 100%;
  height: 100%;
  margin-bottom: 2rem;
}

.carousel-caption {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}

.carousel-caption h1 {
  font-size: 500%;
  text-transform: uppercase;
  text-shadow: 1px 1px 10px #000;
}

.footer>.container-fluid {
  justify-content: center;
  width: 75%;
}

.footer {
  background: #152F4F;
  color: white;
}

.footer p, a {
  color: rgb(150, 150, 150);
}

.footer a {
  text-decoration: none;
}

.footer a:hover {
  color: white;
}

#homepage-bikes {
  opacity: 0.7;
  max-width: 100%;
}

